# tarch-c

./: .clang-format  .dir-locals.el  .gitignore  CMakeLists.txt  Makefile  README.md  best-practices.md  language-features.md  links.md  sanitizer_suppressions.txt  todo.org
include/sokol/: sokol_audio.h
include/sx/: array.h  math-vec.h  sx.h
include/tarch/: tarch.h
shaders/: .gitignore  basic.glsl
src/: dummy_main.c  game_api.h  game_state.c  host_state.c  host_state.h  hot_reload.c  hot_reload.h  main.c  sokol.c  sokol_state.c  sokol_state.h
src/flecs/: CMakeLists.txt
src/runner/: game_api.h  host_state.c  host_state.h  hot_reload.c  hot_reload.h
src/sokol/: sokol.c
src/sx/: CMakeLists.txt
src/sx/include/sx/: platform.h
src/sx/src/: jobs.c
src/tarch/: game_api.h  host_state.c  host_state.h  hot_reload.c  hot_reload.h  sokol.c
